<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginLayoutRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".LoginActivity">

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggleGroupPanel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        app:checkedButton="@+id/btnUserPanel"
        app:singleSelection="true">

        <Button
            android:id="@+id/btnUserPanel"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_panel"
            android:textColor="#FFFFFF"
            app:strokeColor="#FFFFFF" />

        <Button
            android:id="@+id/btnAdminPanel"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/admin_panel"
            android:textColor="#FFFFFF"
            app:strokeColor="#FFFFFF" />

    </com.google.android.material.button.MaterialButtonToggleGroup>

    <ImageView
        android:id="@+id/top_logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/img_logo" />

    <TextView
        android:id="@+id/tvLoginTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/user_login"
        android:textColor="#ffffff"
        android:textSize="25sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/lg_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/button_rounded"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:importantForAutofill="no" />

    <LinearLayout
        android:id="@+id/layoutAdminFields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="15dp"
            android:text="@string/select_role"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinnerLoginRole"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/button_rounded" />

        <EditText
            android:id="@+id/etLoginOtherRole"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/button_rounded"
            android:hint="@string/specify_role_hint"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="15dp"
            android:visibility="gone" />
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        app:hintEnabled="false"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="#FFFFFF">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/lg_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/button_rounded"
            android:hint="Password"
            android:inputType="textPassword"
            android:padding="15dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:focusable="true"
            android:onClick="forgetPassword"
            android:text=" Forget Password"
            android:textColor="#ffffff" />
    </RelativeLayout>

    <Button
        android:id="@+id/lg_signin"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/btn_round"
        android:gravity="center"
        android:text="SignIn"
        android:textAllCaps="false"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/sign_up"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/btn_sign"
        android:gravity="center"
        android:onClick="goto_signup"
        android:text="Signup"
        android:textAllCaps="false"
        android:textColor="#ffffff" />

</LinearLayout>
